--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@baaz/cli",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.2",
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
@@ -10,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "@baaz/cli": "bin/baaz",
+    "cli": "bin/baaz",
     "baaz": "bin/baaz"
   },
   "keywords": [],
@@ -37,5 +36,15 @@
     "pkg-install": "^1.0.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dominicg666/baaz-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dominicg666/baaz-cli/issues"
+  },
+  "homepage": "https://github.com/dominicg666/baaz-cli#readme",
+  "description": ""
 }
